--- a/gui.html
+++ b/gui.html
@@ -9,7 +9,7 @@
 
  <script type="text/javascript" type="text/javascript">
     var ros = new ROSLIB.Ros({
-      url: 'http://localhost:9090/mvp'
+      url: 'ws://localhost:9090/mvp'
     });
 
     ros.on('connection', function () {
