--- a/gui.html
+++ b/gui.html
@@ -9,7 +9,7 @@
 
  <script type="text/javascript" type="text/javascript">
     var ros = new ROSLIB.Ros({
-      url: 'ws://0.0.0.0:9090'
+      url: 'ws://localhost:9090'
     });
 
     ros.on('connection', function () {
