--- a/gui.html
+++ b/gui.html
@@ -7,9 +7,11 @@
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/nipplejs/0.7.3/nipplejs.js"></script>
 
+<script type="text/javascript" src="https://unpkg.com/ut-wss@1.0.0/index.js"></script>
+
  <script type="text/javascript" type="text/javascript">
     var ros = new ROSLIB.Ros({
-      url: 'ws://localhost:9090'
+      url: 'wss://192.168.177.234:9090'
     });
 
     ros.on('connection', function () {
