--- a/gui.html
+++ b/gui.html
@@ -7,7 +7,7 @@
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/nipplejs/0.7.3/nipplejs.js"></script>
 
-<script type="text/javascript" src="https://unpkg.com/wss@3.3.4/index.js"></script>
+<script type="text/javascript" src="https://unpkg.com/wss-nodejs@0.0.1/server.js"></script>
 
  <script type="text/javascript" type="text/javascript">
     var ros = new ROSLIB.Ros({
