--- a/gui.html
+++ b/gui.html
@@ -9,8 +9,9 @@
 
 
  <script type="text/javascript" type="text/javascript">
-    var ros = new webSocket ("ws://192.168.177.234:9090"
-    );
+    var ros = new ROSLIB.Ros({
+      url: 'ws://localhost:9090'
+    });
 
     ros.on('connection', function () {
       document.getElementById("status").innerHTML = "Connected";
