--- a/gui.html
+++ b/gui.html
@@ -10,7 +10,7 @@
 
  <script type="text/javascript" type="text/javascript">
     var ros = new ROSLIB.Ros({
-      url: 'wss://localhost:9090'
+      url: 'wss://192.168.177.234:9090'
     });
 
     ros.on('connection', function () {
