--- a/gui.html
+++ b/gui.html
@@ -38,7 +38,7 @@
 
     cmd_vel_listener = new ROSLIB.Topic({
       ros: ros,
-      name: "/cmd_vel",
+      name: "/turtle1/cmd_vel",
       messageType: 'geometry_msgs/Twist'
     });
 
