--- a/gui.html
+++ b/gui.html
@@ -7,6 +7,7 @@
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/nipplejs/0.7.3/nipplejs.js"></script>
 
+<script type="text/javascript" src="https://unpkg.com/ev-emitter@2.1.2/ev-emitter.js"></script>
 
  <script type="text/javascript" type="text/javascript">
     var ros = new ROSLIB.Ros({
@@ -104,7 +105,8 @@
   <h1>Simple ROS User Interface</h1>
   <p>Connection status: <span id="status"></span></p>
   <p>Last message on /txt_msg: <span id="msg"></span></p>
-  <div id="zone_joystick" style="position: relative;"></div>
+  <img id="image_sub" />
+<div id="zone_joystick" style="position: relative;"></div>
 </body>
 
 </html>
