--- a/gui.html
+++ b/gui.html
@@ -105,7 +105,7 @@
   <h1>Simple ROS User Interface</h1>
   <p>Connection status: <span id="status"></span></p>
   <p>Last message on /txt_msg: <span id="msg"></span></p>
-  <img id="image_sub" />
+  <img id="image_sub" width="420" height="360"/>
 <div id="zone_joystick" style="position: relative;"></div>
 </body>
 
